[tool.poetry]
name = " youtube-analytics"
version = "0.1.0"
description = ""
authors = ["Alex <zayac880880@mail.ru>"]
readme = "README.md"
packages = [{include = " youtube_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
